// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleFeature When platform is more then one should be able to delete platform 1`] = `
Object {
  "feature": "test",
  "platforms": Array [
    Array [
      "desktop",
      Object {
        "active": false,
        "platform": "desktop",
      },
    ],
  ],
}
`;

exports[`ToggleFeature When platform is more then one should be able to have correct platforms 1`] = `
Object {
  "feature": "test",
  "platforms": Array [
    Array [
      "desktop",
      Object {
        "active": false,
        "platform": "desktop",
      },
    ],
    Array [
      "mobile",
      Object {
        "active": false,
        "platform": "mobile",
      },
    ],
  ],
}
`;

exports[`ToggleFeature When platform is more then one sould be able to have correct string version 1`] = `"{\\"feature\\":\\"test\\",\\"platforms\\":[[\\"desktop\\",{\\"platform\\":\\"desktop\\",\\"active\\":false}],[\\"mobile\\",{\\"platform\\":\\"mobile\\",\\"active\\":false}]]}"`;

exports[`ToggleFeature When toggle feature is initialized should be able to have initial value 1`] = `
Object {
  "feature": "test",
  "platforms": Array [],
}
`;

exports[`ToggleFeature When toggle feature is initialized sould be able to have correct string version 1`] = `"{\\"feature\\":\\"test\\",\\"platforms\\":[]}"`;
